# kig-web

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: docker.yml
protos/: abc  bed.proto  bp.proto  cai.proto  common.proto  gamelog.proto  gamelog_cai.proto  gamelog_core.proto  grav.proto  halloween.proto  herd.proto  timv.proto
src/: db.rs  error.rs  main.rs  modes.rs
src/protos/: gamelog_cai.rs  gamelog_core.rs  mod.rs
src/web/: gamelog.rs  mod.rs
src/web/gamelog/: bed.rs  bp.rs  cai.rs  event.rs  grav.rs  halloween.rs  mod.rs  timv.rs
static/css/: bootstrap-dark.min.css  bootstrap-dark.src.css  gamelog.css
static/js/: gamelog.js  theme.js
templates/: gamelog.html  master-template.html
templates/gamelogs/: bed.html  bp.html  cai.html  grav.html  halloween.html  herd.html  timv.html
