[package]
name = "kig-web"
version = "0.1.0"
authors = ["RoccoDev <hey@rocco.dev>"]
edition = "2018"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
mongodb = { version = "1.1.1", default-features = false, features = ["tokio-runtime"]}

# Web server
askama = "0.10"
actix-web = "3"

[build-dependencies]
# Gamelog deserialization
protobuf-codegen-pure = "2.20"