[package]
name = "kig-web"
version = "0.1.0"
authors = ["RoccoDev <hey@rocco.dev>"]
edition = "2018"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
mongodb = { version = "1.1.1", default-features = false, features = ["tokio-runtime"]}

# Gamelogs
protobuf = "2.20"
base62 = "0.3"
regex = "1"
lazy_static = "1"

# Web server
askama = "0.10"
askama_derive = "0.10"
actix-web = "3"
cached = "0.22"
actix-files = "0.5"

[build-dependencies]
# Gamelog deserialization
protobuf-codegen-pure = "2.20"